fix: adjust line breaks in descriptions of products

--- a/src/components/catalog/productPage/ProductPage.module.css
+++ b/src/components/catalog/productPage/ProductPage.module.css
@@ -24,6 +24,7 @@
   flex-direction: row;
   gap: 5rem;
   padding: 2rem;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .images {
@@ -100,8 +101,7 @@
 }
 
 .description {
-  padding: 2rem 0;
-  border-top: 1px solid #e5e5e5;
+  padding-top: 1rem;
 }
 
 .fast-purchase-button {
